@@ -20,6 +20,7 @@ NEW: [features/improvements]
 +Add automatic file backup option to periodically backup buffer contents.
 +Patch from (hasan aljudy) to show cwd and add e! command to commandbar
 +Automatically show path completion list when doing an e or cd command.
++Display the documents EOL mode in the status bar.
 
 BUG FIXES:
 +Fix python autocomp from failing when word was next to a boundry character.
